<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1B1B">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/lebplay_mlvb_live_play"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/ll_room_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:text="@string/lebplay_please_input_streamid" />

        <EditText
            android:id="@+id/et_stream_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="5dp"
            android:textSize="16sp"
            android:text="235672"
            android:background="@drawable/common_edit_bg"
            android:layout_marginTop="5dp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_desc_high"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/lebplay_live_play_desc"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_desc_high"
        android:layout_above="@+id/btn_play_webrtc"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:textColor="@android:color/holo_red_dark"
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:text="@string/lebplay_desc_recommend"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_play_webrtc"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/lebplay_webrtc_play"
        android:background="@drawable/common_button_bg"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_height="50dp"/>
</RelativeLayout>
